# rust-rest-api

./: .env  Cargo.toml
migrations/2020-02-02-074135_create_user/: up.sql
src/: db.rs  main.rs  schema.rs
src/user/: mod.rs  model.rs  routes.rs
